# kmscon

./: NEWS.md  README.md  meson.build  meson.options
docs/man/: kmscon.1.xml.in  kmscon.conf.5.xml.in
scripts/: kmscon-launch-gui.sh
scripts/etc/: kmscon.conf.example
scripts/systemd/: kmscon.service.in  kmsconvt@.service.in
scripts/terminfo/: build_terminfo.py  kmscon.ti
src/: conf.c  conf.h  dbus.c  dbus.h  kmscon_conf.c  kmscon_conf.h  kmscon_dummy.c  kmscon_issue.h  kmscon_main.c  kmscon_mod_gltex.c  kmscon_seat.c  kmscon_seat.h  kmscon_terminal.c  kmscon_terminal.h  meson.build  pty.c  text.c  text.h  text_bbulk.c  text_gltex.c  uterm_monitor.c  uterm_monitor.h  uterm_systemd.c  uterm_vt.c  uterm_vt.h  uterm_vt_fake.c  uterm_vt_internal.h  uterm_vt_libseat.c  uterm_vt_real.c
src/font/: font.c  font.h  font_8x16.c  font_freetype.c  font_pango.c  font_unifont.c  meson.build  mod_freetype.c  mod_pango.c  mod_unifont.c
src/input/: input.c  input.h  input_internal.h  input_pointer.c  input_uxkb.c  meson.build
src/render/: bbulk.c
src/shl/: dlist.h  eloop.c  gl_shader.c  hook.h  log.c  lru.h  meson.build  module.c  module.h  module_interface.h  register.h
src/video/: drm2d_internal.h  drm2d_render.c  drm2d_video.c  drm3d_internal.h  drm3d_render.c  drm3d_video.c  drm_shared.c  drm_shared_internal.h  fbdev_internal.h  fbdev_render.c  fbdev_video.c  meson.build  mod_drm3d.c  video.c  video.h  video_internal.h
tests/: meson.build  test_bbulk.c  test_include.h  test_input.c  test_output.c  test_shl.c  test_vt.c
